# rye-repro

./: pyproject.toml
projecta/: README.md  pyproject.toml
projecta/src/projecta/: __init__.py
projectb/: README.md  pyproject.toml
projectb/src/projectb/: __init__.py
projectc/: README.md  pyproject.toml
projectc/src/projectc/: __init__.py
