[project]
name = "rye-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "James Yean", email = "ywhjames@hotmail.com" }
]
classifiers = ["Private :: Do Not Upload"]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "rye_test:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.workspace]
members = [
    "projecta",
    "projectb",
    "projectc",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true
