[project]
name = "projecta"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "James Yean", email = "ywhjames@hotmail.com" }
]
dependencies = [
    "pandas>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "projecta:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/projecta"]
