[project]
name = "projectb"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "James Yean", email = "ywhjames@hotmail.com" }
]
dependencies = [
    "numpy>=1.26.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
pandas = [
    "projecta>=0.1.0"
]

[project.scripts]
hello = "projectb:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/projectb"]
