[project]
name = "projectc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "James Yean", email = "ywhjames@hotmail.com" }
]
dependencies = [
    # "projectb[pandas]>=0.1.0",
    "projectb>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "projectc:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/projectc"]
